package com.microtech.microtechsmartmgmt.entity;

public class Client {
}
