package com.microtech.microtechsmartmgmt.entity;

public class User {
}
