classDiagram
    class User {
        +Long id
        +String username
        +String password
        +Role role
    }

    class Client {
        +Long id
        +String fullName
        +String email
        +CustomerTier tier
        +BigDecimal totalSpent
        +int totalOrders
        +calculateTier() void
    }

    class Product {
        +Long id
        +String name
        +BigDecimal price
        +int stockQuantity
        +boolean deleted
        +validateStock(int quantity) void
        +decrementStock(int quantity) void
    }

    class Order {
        +Long id
        +LocalDateTime createdAt
        +OrderStatus status
        +BigDecimal subTotal
        +BigDecimal discountAmount
        +BigDecimal tvaAmount
        +BigDecimal totalTTC
        +String promoCode
        +calculateFinalTotal() void
        +remainingAmount() BigDecimal
        +canBeConfirmed() boolean
    }

    class OrderItem {
        +Long id
        +int quantity
        +BigDecimal unitPriceSnapshot
    }

    class Payment {
        +Long id
        +PaymentType type
        +BigDecimal amount
        +LocalDateTime paymentDate
        +PaymentStatus status
    }

%% Relationships
    Client "1" -- "0..*" Order : places
    Order "1" *-- "1..*" OrderItem : contains
    Product "1" -- "0..*" OrderItem : references
    Order "1" -- "0..*" Payment : has
    User "1" -- "0..1" Client : associated_with